# constraint_learning

./: .gitignore  .gitmodules  Makefile  README.md  add_vim_to_jupyter.sh  environment.yml  generate_results.py  requirements.txt  run_in_background.sh  setup.cfg  solve_mosek.ptf  stereo2d_problem.py
_notebooks/: ConstraintsLearning.ipynb  Interpret.ipynb  Makefile  SimulationResults.ipynb  requirements.txt
_scripts/: all_study.py  check_constraints.py  constraints_study.py  exclude-server.txt  experiments.py  generate_all_results.py  generate_all_results.sh  generate_cliques.py  generate_results.py  generate_sparsity_results.py  get_server_results.sh  interpret.py  lifter_study.py  matrix_study.py  mono_study.py  noise_study.py  other_study.py  poselandmark_study.py  range_only_study.py  robust_estimation.ipynb  run_admm_study.py  run_all_study.py  run_autotemplate.py  run_clique_scale.py  run_clique_study.py  run_datasets_ro.py  run_datasets_stereo.py  run_example_admm.py  run_examples.py  run_matweight_study.py  run_noise_study.py  run_other_study.py  run_range_only_study.py  run_starloc_ro.py  run_starloc_stereo.py  run_stereo_study.py  run_tightness_study.py  run_time_study.py  stereo_study.py  utils.py
_test/: test_cliques.py  test_literal.py  test_local_solvers.py  test_parameters.py  test_sdp_solvers.py  test_solvers.py  test_sparse.py  test_special_cases.py  test_state_lifter.py  test_tools.py  tools.py
_tex/: _results  summary.tex  update1.tex
auto_template/: learner.py  real_experiments.py  sim_experiments.py
centering/: certificate.py
(+51 files in other folders)
