[metadata]
name = constraint_learning 
version = 0.0.1
authors = [
    {name = "Frederike Dümbgen", email = "frederike.duembgen@gmail.com" },]
description = Codebase for learning constraints 
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/utiasASRL/constraint_learning.git"

[options]
packages = find:

[options.packages.find] # do not mistake tests/ for a package directory
exclude=tests*

[flake8]
ignore = W292, W391, F541, F841, E203, E501, W503, E741, E712
exclude = _notebooks/*, *.ipynb_checkpoints*, venv/
max-line-length = 99
